@@ -15,6 +15,11 @@
 	reorganized server code into libsqlrserver
 	implemented the swisscomm log format as a plugin
 	added dbHostName and dbIpAddress methods to the client API
+	refactored authentication to remove a client-server round-trip
+	removed handoff="reconnect" and replaced it with listener-proxying
+		to remove a client-server round-trip
+	disabled nagle's algorithm for all sockets
+	fixed a bug that could cause a hang if the db login failed
 
 0.48 - integrated patches from Neowiz for:
 		handling for oracle errors ora-01033, ora-02067 and ora-04068
